@@ -127,6 +127,7 @@ declare namespace apm {
     addSpanFilter (fn: FilterFn): void;
     addTransactionFilter (fn: FilterFn): void;
     addMetadataFilter (fn: FilterFn): void;
+    flush (): Promise<void>;
     flush (callback?: Function): void;
     destroy (): void;
 
