@@ -628,7 +628,9 @@ Agent.prototype.handleUncaughtExceptions = function (cb) {
 
 // Flush all ended APM events (transactions, spans, errors, metricsets) to APM
 // server as soon as possible. If the optional `cb` is given, it will be called
-// `cb(flushErr)` when this is complete.
+// `cb(flushErr)` when this is complete. If no `cb` is given, then a `Promise`
+// will be returned, which will either resolve with `void` or reject with
+// `flushErr`.
 //
 // Encoding and passing event data to the agent's transport is *asynchronous*
 // for some event types: spans and errors. This flush will make a *best effort*
@@ -664,7 +666,22 @@ Agent.prototype.flush = function (cb) {
   // being reported to APM server".
   const DEFAULT_INFLIGHT_FLUSH_TIMEOUT_MS = 1000
 
-  return this._flush({ inflightTimeoutMs: DEFAULT_INFLIGHT_FLUSH_TIMEOUT_MS }, cb)
+  // shared options for the private `._flush()` API.
+  const opts = { inflightTimeoutMs: DEFAULT_INFLIGHT_FLUSH_TIMEOUT_MS }
+
+  if (typeof cb !== 'function') {
+    return new Promise((resolve, reject) => {
+      this._flush(opts, (err) => {
+        if (err) {
+          reject(err)
+        }
+
+        resolve()
+      })
+    })
+  }
+
+  return this._flush(opts, cb)
 }
 
 // The internal-use `.flush()` that supports some options not exposed to the
